--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,5 @@
-$background-color: #000000;
-$font-color: #FFFFFF;
+$background-color: rgb(17, 228, 172);
+$font-color: rgb(16, 7, 78);
 
 html, body {
   background: $background-color;
